--- a/bibliography.bib
+++ b/bibliography.bib
@@ -351,7 +351,7 @@ version="0.8.0",
 month="July",
 year="2012",
 url="http://hackage.haskell.org/package/unification-fd",
-note={\url{http://hackage.haskellhttp://yieldprolog.sourceforge.net/.org/package/unification-fd}}
+note={\url{http://hackage.haskell.org/package/unification-fd}}
 }
 @misc{website:unification-fd-lib-tutorial1,
 title = {Unification Tutorial 1},
