--- a/embedding.tex
+++ b/embedding.tex
@@ -48,8 +48,7 @@ Other informal discussions of \progLang{Prolog} have already been mentioned in C
 
 \section{Books related to implementing logic programming}
 
-Some books related to implementing logic programming are \cite{friedman05reasoned}, \cite{website:logicprogexamplehaskell}, 
-\cite{krishnamurthi2007programming}. \cite{friedman05reasoned} aims at adding a few
+Some books related to implementing logic programming are \cite{friedman05reasoned,website:logicprogexamplehaskell,krishnamurthi2007programming}. \cite{friedman05reasoned} aims at adding a few
 constructs to \progLang{Scheme} to bring together the functional and logic styles of programming and capture the essence of
 \progLang{Prolog} in \progLang{Scheme}. Moreover, \cite{website:logicprogexamplehaskell} claims that \progLang{Haskell} is suitable for basic logic
 programming using the \haskellConstruct{List Monad}.
@@ -76,7 +75,7 @@ The work presented in the series
 encapsulate various aspects of an embedding of \progLang{Prolog} in \progLang{Haskell}.
 Being one of the very first attempts, the work is influenced by embeddings of \progLang{Prolog}
 in other languages like \progLang{Scheme} and \progLang{Lisp}.
-Although the host language has distinct characteristics such as lazy evaluation and a strong type system, the proposed
+Although the host language \yyy{}{\progLang{Haskell}} has distinct characteristics such as lazy evaluation and a strong type system, the proposed
 scheme tends to be general as the aim here is to achieve a \progLang{Prolog}-like eDSL and not a multiparadigm
 declarative language.
 \progLang{Prolog} \prologConstruct{predicates} are translated to \progLang{Haskell} functions which produce a
@@ -100,18 +99,15 @@ Continuing from above, \cite{claessen2000typed} taps into the advantages of the 
 functional logic programming language.
 This results in typed logical predicates and a backtracking \haskellConstruct{monad} with support for various data
 types and search strategies.
-Though not very efficient nor practical,
+Though not very efficient \yyy{nor}{or} practical,
 the method aims at a more elegant translation of programs from one language
 to the other.
 While other publications such as \cite{erwig2004escape} attempt at exercising \progLang{Haskell} features without adding any new 
 constructs.\endnote{%
     This is a sentence fragment.
-  }\elabel{sentence-fragment} \mehul{changed}
-It uses \progLang{Haskell}'s type class to express a general structure for the problem while its instances represent the solutions. 
-\eref{sentence-fragment}\textsuperscript{,}\endnote{%
-    I do not understant the preceding sentence.
-	\mehul{changed}
-  }
+  }\elabel{sentence-fragment} 
+It uses \progLang{Haskell}'s type class to express a general structure for the problem while its instances
+represent the solutions.
 \cite{hinze1998prological} replicates \progLang{Prolog}'s control operations in \progLang{Haskell} suggesting the
 use of the \progLang{Haskell} \haskellConstruct{State Monad} to capture and maintain a global state.
 The main contributions are a Backtracking Monad Transformer that can enrich any \haskellConstruct{monad} with
@@ -163,10 +159,13 @@ Exploration'' \cite{logic-grows-on-trees-lib}.
 The more specific the feature, the lesser the support in \progLang{Haskell}.
 Moving on to the other feature of \progLang{Prolog} is \prologConstruct{unification}.\endnote{%
   ``Moving on to the other distinct feature of Prolog is Unification.''?  Say it aloud.
-  \mehul{changed}
+  \mehul{changed}.
 }
-There are two libraries (\cite{unification-fd-lib}, \cite{cmu-lib}) that unify two \progLang{Prolog} terms and return
-the resulting substitution.
+There are two libraries (\cite{cmu-lib,unification-fd-lib}) that unify two \progLang{Prolog} terms and return
+the resulting substitution.\endnote{%
+  This \P{} makes it sound like unification is unique to \progLang{Prolog} and that the two libraries are
+  \progLang{Prolog} specific, which at least in the case of \cite{unification-fd-lib} is incorrect.
+}
 
 
 %\item[$\bullet$]Backtracking
