Fixed some pdf hyperlink problems.

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -403,6 +403,7 @@
   \begin{scope}
     \def\enoteheading{\section*{\notesname}%
       \addtocounter{section}{1}%
+      \phantomsection
       \addcontentsline{toc}{section}{\numberline\thesection{End Notes}}}
     \theendnotes
   \end{scope}
