--- a/proto2.tex
+++ b/proto2.tex
@@ -20,12 +20,9 @@ in with the other components such as the search strategy of the library.
 
 \section{How \protect\codeLibrary{prolog-0.2.0.1} works}
 
-The \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} was written by Matthias Bartsch and consists of 14 \progLang{Haskell} files. It 
+The \codeLibrary{prolog-0.2.0.1} library (\cite{prolog-lib}) was written by Matthias Bartsch and consists of 14 \progLang{Haskell} files. It 
 implements data base assertions and cuts but lacks any IO facilities. Moreover, the abstract syntax used to implement the language is rigid
-and leaves very little to no scope for extension. Figure~\ref{fig:prlg0201architecture} describes its architecture.\endnote{%
-  See the comments in \S~\ref{subsec:thoughts-chapt-proto2}.
-  \mehul{changed}
-}
+and leaves very little to no scope for extension. Figure~\ref{fig:prlg0201architecture} describes its architecture.
 
 \begin{figure}[H]
 \centering
@@ -58,10 +55,7 @@ Figure~\ref{fig:A language-processing system}).
 \label{fig:A language-processing system}
 \end{figure}
 
-They specifically contain parts of a compiler (see Figure~\ref{fig:Phases of Compiler}).\endnote{%
-  There is a stranded sentence fragment here.  Fix.
-	\mehul{changed}
-}
+They specifically contain parts of a compiler (see Figure~\ref{fig:Phases of Compiler}).
 
 \begin{figure}[H]
 \centering
