add, removed and polished content in section 13.4 in proto4

--- a/proto4.tex
+++ b/proto4.tex
@@ -96,7 +96,7 @@ the second argument, getting an \haskellConstruct{IOAction} \haskellConstruct{b}
 Listing~\ref{tab:ioactionexampleoutput} shows the output.
 
 
-\begin{scope}
+\begin{code-list}
 \begin{singlespace}
 \begin{minted}[frame=lines,linenos]{haskell}
 hello = put "What is your name?"      `seqio` \_    ->
@@ -268,7 +268,6 @@ operations. The \haskellClass{OneBinding} constructor represents a \prologConstr
 =======
 \caption{\progLang{Prolog}-like language with \languageConstruct{IO} constructors}
 \label{tab:prologresultdatatype}
->>>>>>> added, removed polished content in section 13.4 in proto4
 \end{code-list}
 
 
