added IOSketchM to section 13.6 in proto4

--- a/proto4.tex
+++ b/proto4.tex
@@ -266,7 +266,6 @@ operations. The \haskellClass{OneBinding} constructor represents a \prologConstr
 \label{tab:prologresultdatatype}
 \end{code-list}
 
-
 \section{IOSketch}
 
 \begin{code-list}[H]
@@ -277,6 +276,16 @@ operations. The \haskellClass{OneBinding} constructor represents a \prologConstr
 \label{056385920}
 \end{code-list}
 
+
+\section{IOSketchM}
+
+\begin{code-list}[H]
+\begin{singlespace}
+\inputminted[linenos]{haskell}{IOSketchM.hs}
+\end{singlespace}
+\caption{}
+\label{056385920}
+\end{code-list}
 
 \section{Chapter recapitulation}
 
