--- a/pwp.tex
+++ b/pwp.tex
@@ -18,9 +18,7 @@
 This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be translated to the host 
 language to extend its capabilities.
 
-\section{Section title needed}
-
-\paragraph{Why a logic programming language?}
+\section{Logic programming language}
 
 %Our base language, \progLang{Haskell}, is from the same paradigm. It would be interesting to see how two languages of the same family with 
 %conflicting features can be made to work together.
@@ -28,7 +26,7 @@ language to extend its capabilities.
 One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language are from the same paradigm.
 This provides a platform to play around with the conflicting characteristics of the two languages.
 
-\paragraph{\progLang{Prolog} as a logic programming language}
+\section{\progLang{Prolog}}
 \progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and
   computational linguistics.
   It is a declarative language, i.e., a program is a set of facts an rules running a
@@ -37,26 +35,7 @@ This provides a platform to play around with the conflicting characteristics of 
   \progLang{Prolog} is very popular and has a number of implementations
   \cite{website:comparisonofprologimplementationswiki} for different purposes.
 
-
-\paragraph{Why embed \progLang{Prolog} ?}
-
-\begin{comment}
-Existing implementations
-
-As a starting point a few publications and implementations helped in exploring the topic. The shortcomings were clearly visible to work and
-improve upon giving a starting point.
-\end{comment}
-
-\progLang{Prolog} seems to be a very popular choice as a target language. Also for the specific topic of embedding \progLang{Prolog} in 
-\progLang{Haskell}, implementations and publications exist which provide a starting point.\endnote{%
-  The surrounding \macroName{begin}\macroArg{enumerate} should be a
-  \texttt{description} environment, or a list of
-  \macroName{sub}\textsuperscript{\textasteriskcentered}\texttt{section}'s.
-	\mehul{changed}
-}
-
-
-\paragraph{Simple Syntax}
+\subsection{Simple Syntax}
 
 \progLang{Prolog} is dynamically typed. It has a single data type, the term, which has several subtypes: atoms, numbers, variables and 
 compound terms \cite{wikiprolog}.
@@ -145,13 +124,14 @@ Variables in \progLang{Prolog} are rather different from those in most other lan
 
 \end{comment}
 
-\paragraph{Simple Semantics}
+\subsection{Simple Semantics}
 
 Since the commutative nature of logical disjunction and conjunction, declaratively speaking the order of rules and their sub goals is
 irrelevant. However, the procedural aspect must be taken into account to determine the execution strategy of \progLang{Prolog} since it
 has to deal with impure predicates. Moreover, a particular order of execution can lead to infinite recursion.
 
 
+\subsection{Constraint handling rules}
 \textbf{semantics of chr in \progLang{swi Prolog}} 
 In this subsection the operational semantics of CHR\endnote{%
   What is CHR?
@@ -218,15 +198,33 @@ $\backslash$constraints\_2 $<=>$ body ] The constraints\_1 constraints are not c
   \end{itemize}
 \end{description}
 
-\paragraph{Universal Horn Clauses}
+\subsection{Universal Horn clauses}
 
 
-\paragraph{Unification}
-
-\paragraph{Definite Clause Grammar}
+\subsection{Unification}
 
 
 
+\subsection{Definite clause grammar}
+
+
+
+\section{Embedding \progLang{Prolog}}
+
+\begin{comment}
+Existing implementations
+
+As a starting point a few publications and implementations helped in exploring the topic. The shortcomings were clearly visible to work and
+improve upon giving a starting point.
+\end{comment}
+
+\progLang{Prolog} seems to be a very popular choice as a target language. Also for the specific topic of embedding \progLang{Prolog} in 
+\progLang{Haskell}, implementations and publications exist which provide a starting point.\endnote{%
+  The surrounding \macroName{begin}\macroArg{enumerate} should be a
+  \texttt{description} environment, or a list of
+  \macroName{sub}\textsuperscript{\textasteriskcentered}\texttt{section}'s.
+	\mehul{changed}
+}
 
 
 \section{Chapter recapitulation}
