addressed notes in hwh.tex

--- a/hwh.tex
+++ b/hwh.tex
@@ -46,13 +46,14 @@ The specification is set by the programming language.
 Generally, in the case of imperative languages the control flow is sequential while for a functional language is
 recursion \cite{website:controlflowdalhousie}.
 For example, \progLang{Java} has a top down sequential execution approach.
-The declarative style consists of defining components of programs i.e.\yyy{}{\Large,}
+The declarative style consists of defining components of programs i.e.,
 computations not a control flow \cite{website:declarativeprogrammingwiki}.
 
 This is where \progLang{Haskell} shines by providing something called a \textit{monad}.
-Functional Programming Languages\endnote{%
+Functional programming languages\endnote{%
   \david{What style guide are you using to determine capitalization?}\newline
   \mehul{none at the moment but I will change certain capitals to small}
+  \mehul{changed}
 }\elabel{caps-choices}
 define computations which then need to be ordered in some way to form a
 combination \cite{website:monadascomputation}.
