added figure caption and label for figures 13.12, 13.13 in proto4

--- a/proto4.tex
+++ b/proto4.tex
@@ -272,8 +272,8 @@ operations. The \haskellClass{OneBinding} constructor represents a \prologConstr
 \begin{singlespace}
 \inputminted[linenos]{haskell}{IOSketch.hs}
 \end{singlespace}
-\caption{}
-\label{056385920}
+\caption{IOSketch}
+\label{tab:iosketch}
 \end{code-list}
 
 
@@ -283,8 +283,8 @@ operations. The \haskellClass{OneBinding} constructor represents a \prologConstr
 \begin{singlespace}
 \inputminted[linenos]{haskell}{IOSketchM.hs}
 \end{singlespace}
-\caption{}
-\label{056385920}
+\caption{IOSketchM}
+\label{tab:iosketchm}
 \end{code-list}
 
 \section{Chapter recapitulation}
