changed section 6.2 name in chapter 6 multiparadigm.tex.

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -14,7 +14,7 @@
 This chapter describes the approach for integrating properties of multiple languages from different programming paradigms, especially, 
 functional logic programming languages.  
 
-\section{Section title needed}
+\section{Introduction to multi paradigm laguages}
 Over the years another approach has branched off from embedding languages, to merge and/or integrate programming
 languages from different paradigms.
 Let us take an example of the \progLang{Scala} programming language \cite{website:scala}, a hybrid
